# ryan_kubin-SDK

./: .gitignore  LICENSE  README.md  design.md  pyproject.toml  requirements.txt
lotr-movies/: movie.py  schemas.py
lotr-movies-ryankubin/: config.py  connection.py  lotr.py  query.py  quote.py
lotr_ryankubin/: lotr.py  movie.py  quote.py
tests/: fixtures.py  test_lotr.py  test_movie.py
