[build-system]
requires = [
    "hatchling",
    "urllib3>=1.26",
    "requests>2.28"]
build-backend = "hatchling.build"

[project]
name = "lotr_ryankubin"
version = "0.0.7"
authors = [
  { name="Ryan Kubin", email="ryankubin@gmail.com" },
]
description = "SDK for a lotr API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "urllib3"
]
[project.urls]
"Homepage" = "https://github.com/ryankubin/ryan_kubin-SDK"
"Bug Tracker" = "https://github.com/ryankubin/ryan_kubin-SDK/issues"